correção de html e adicção de sccs
ficou faltando algumas seções no html que foram corrigidas e foi estilizado a seção vitrine, parceiros e categorias

--- a/styles/abstract/_variable.scss
+++ b/styles/abstract/_variable.scss
@@ -5,4 +5,9 @@ $tamanho-pequeno: 12px;
 //Color
 $cor-primaria: #9f9f9f;
 $cor-secundaria: #3019b2;
-// $cor-terciaria: #F1E0AC;
+$branco: #fff;
+$amarelo: #f7ca11;
+$azul-escuro: #271c47;
+$preto-claro: #4e4e4e;
+$cinza-categorias: #f4f4f4;
+$roxo: #3442b5;
