--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,7 @@
 @import './abstract/base';
 @import './abstract/variable';
 @import './component/header';
+@import './component/banner';
+@import './component/categorias';
+@import './component/vitrine';
+@import './component/parceiros';
