fim da estilização

--- a/styles/abstract/_variable.scss
+++ b/styles/abstract/_variable.scss
@@ -1,5 +1,7 @@
 //Font
 $fonte: 'Poppins', sans-serif;
+$fonte-secundaria: 'Outfit', sans-serif;
+$fonte-terciaria: 'Work Sans', sans-serif;
 $tamanho-pequeno: 12px;
 
 //Color
