--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,3 +5,5 @@
 @import './component/categorias';
 @import './component/vitrine';
 @import './component/parceiros';
+@import './component/marcas';
+@import './component/footer'
