--- a/styles/index.css
+++ b/styles/index.css
@@ -64,12 +64,12 @@ nav .cabecalho-busca .container-pesquisa .cabecalho-pesquisa {
 }
 nav .cabecalho-busca .container-pesquisa .cabecalho-pesquisa::-moz-placeholder {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 400;
   color: #9f9f9f;
 }
 nav .cabecalho-busca .container-pesquisa .cabecalho-pesquisa::placeholder {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 400;
   color: #9f9f9f;
 }
 nav .cabecalho-busca .container-pesquisa .icone-lupa {
@@ -311,4 +311,182 @@ nav .cabecalho-categorias .cabecalho-categoria-item:hover {
   border: 1px solid transparent;
   border-radius: 6px;
   cursor: pointer;
+}
+
+.marcas {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.marcas .marcas-titulo {
+  font-weight: 700;
+  font-size: 30px;
+  color: #3442b5;
+  margin: 0;
+}
+.marcas .marcas-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 42px;
+  margin: 32px 115px 90px 101.5px;
+}
+.marcas .marcas-container .marcas-item {
+  width: 211px;
+  height: 211px;
+  border: 1px solid transparent;
+  border-radius: 105.5px;
+  box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.13);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.marcas .marcas-container .marcas-item .marcas-img {
+  width: 117px;
+  height: 34.76px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+}
+.footer .newsletter-container {
+  background-color: #271c47;
+  padding: 40px 80px;
+  margin-top: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer .newsletter-container .newsletter-container-textos {
+  width: 515px;
+  height: 82px;
+}
+.footer .newsletter-container .newsletter-container-textos .newsletter-titulo {
+  font-family: "Outfit", sans-serif;
+  font-weight: 600;
+  font-size: 32px;
+  color: #fff;
+  margin: 0 0 8px 0;
+}
+.footer .newsletter-container .newsletter-container-textos .newsletter-texto {
+  font-weight: 300;
+  font-size: 14px;
+  color: #fff;
+  margin: 0;
+}
+.footer .newsletter-container .newsletter-form {
+  gap: 8px;
+}
+.footer .newsletter-container .newsletter-form .newsletter-container-form {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding-bottom: 8px;
+}
+.footer .newsletter-container .newsletter-form .newsletter-container-form .newsletter-container-input {
+  height: 42px;
+  width: 233px;
+  background-color: #fff;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+.footer .newsletter-container .newsletter-form .newsletter-container-form .newsletter-container-input .newsletter-input {
+  background: transparent;
+  border: none;
+  padding-left: 24px;
+  color: #fff;
+}
+.footer .newsletter-container .newsletter-form .newsletter-container-form .newsletter-container-input .newsletter-input::-moz-placeholder {
+  font-size: 14px;
+  font-weight: 500;
+  color: #676767;
+}
+.footer .newsletter-container .newsletter-form .newsletter-container-form .newsletter-container-input .newsletter-input::placeholder {
+  font-size: 14px;
+  font-weight: 500;
+  color: #676767;
+}
+.footer .newsletter-container .newsletter-form .newsletter-container-form .newsletter-btn {
+  width: 157px;
+  height: 42px;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  color: #161615;
+  background-color: #f7ca11;
+  border: 1px solid transparent;
+  border-radius: 6px;
+}
+.footer .newsletter-container .newsletter-form .newsletter-termos {
+  color: #fff;
+  font-weight: 400;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.footer .rodape {
+  display: flex;
+  flex-direction: row;
+  background-color: #f4f4f4;
+}
+.footer .rodape .rodape-contatos {
+  margin: 61px 1px 61px 80px;
+  height: 198px;
+  padding-right: 90px;
+  border-right: 1px solid #cfcfcf;
+}
+.footer .rodape .rodape-contatos .rodape-contato-logo {
+  width: 164px;
+  height: 48px;
+  padding-top: 19px;
+}
+.footer .rodape .rodape-contatos .rodape-contato-texto {
+  width: 354px;
+  height: 42px;
+  font-weight: 300;
+  font-size: 14px;
+  color: #3f3f40;
+  padding: 18px 0 27px 0;
+  margin: 0;
+}
+.footer .rodape .rodape-contatos .rodape-contato-icone {
+  display: flex;
+  gap: 26px;
+  padding-bottom: 19px;
+}
+.footer .rodape .rodape-info {
+  height: 198px;
+  margin: 42px 195px 42px 90px;
+  padding: 41px 0 41px 0;
+  display: flex;
+  gap: 100px;
+}
+.footer .rodape .rodape-info .rodape-info-item {
+  gap: 16px;
+}
+.footer .rodape .rodape-info .rodape-info-item .rodape-info-titulo {
+  font-weight: 700;
+  font-size: 16px;
+  color: #5f5f5f;
+}
+.footer .rodape .rodape-info .rodape-info-item .rodape-info-texto {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #5f5f5f;
+}
+.footer .copyright {
+  display: flex;
+  justify-content: center;
+  padding: 13px 0 13px 0;
+}
+.footer .copyright .copyright-text {
+  font-weight: 300;
+  font-size: 13px;
+  color: #3f3f40;
+  margin: 0;
 }/*# sourceMappingURL=index.css.map */
